finalize feed service for api testing, fix cors for allowed methods at gateway level